--- a/docs/examples/ipyleaflet.ipynb
+++ b/docs/examples/ipyleaflet.ipynb
@@ -8,7 +8,37 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81c61062de104e0181f3a4bb9d491c9c",
+       "model_id": "e9b6c94771e043679cfd022783c72edf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[38.128, 2.588], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_…"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ipyleaflet import Map, basemaps\n",
+    "\n",
+    "center = [38.128, 2.588]\n",
+    "zoom = 5\n",
+    "\n",
+    "Map(basemap=basemaps.OpenStreetMap.Mapnik, center=center, zoom=zoom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "889679a373cc482c985780bee2259b48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,6 +68,80 @@
     "# You can also update the marker location from Python, that will update the\n",
     "# marker location on the Map:\n",
     "marker.location = (50, 356)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c13ae09508f14948af8ce4c9410df2ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[45, -102], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_t…"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = ipyleaflet.Map(center = (45,-102),zoom=4)\n",
+    "m.scroll_wheel_zoom =True\n",
+    "m.add_control(ipyleaflet.LayersControl())\n",
+    "\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopydata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from geopydata.geopydata import Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28447ad7e0494c3084829ff7922e0685",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[0.0, 0.0], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_t…"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = Map()\n",
+    "\n",
+    "m"
    ]
   },
   {
