--- a/docs/examples/ipyleaflet.ipynb
+++ b/docs/examples/ipyleaflet.ipynb
@@ -2,106 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9b6c94771e043679cfd022783c72edf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[38.128, 2.588], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_…"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from ipyleaflet import Map, basemaps\n",
-    "\n",
-    "center = [38.128, 2.588]\n",
-    "zoom = 5\n",
-    "\n",
-    "Map(basemap=basemaps.OpenStreetMap.Mapnik, center=center, zoom=zoom)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "889679a373cc482c985780bee2259b48",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[52.204793, 360.121558], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from ipyleaflet import Map, Marker\n",
-    "\n",
-    "center = (52.204793, 360.121558)\n",
-    "\n",
-    "m = Map(center=center, zoom=15)\n",
-    "\n",
-    "marker = Marker(location=center, draggable=True)\n",
-    "m.add(marker)\n",
-    "\n",
-    "display(m)\n",
-    "\n",
-    "# Now that the marker is on the Map, you can drag it with your mouse,\n",
-    "# it will automatically update the `marker.location` attribute in Python\n",
-    "\n",
-    "# You can also update the marker location from Python, that will update the\n",
-    "# marker location on the Map:\n",
-    "marker.location = (50, 356)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c13ae09508f14948af8ce4c9410df2ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[45, -102], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_t…"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m = ipyleaflet.Map(center = (45,-102),zoom=4)\n",
-    "m.scroll_wheel_zoom =True\n",
-    "m.add_control(ipyleaflet.LayersControl())\n",
-    "\n",
-    "m"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,36 +32,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from geopydata.geopydata import Map"
+    "# from geopydata.geopydata import Map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28447ad7e0494c3084829ff7922e0685",
+       "model_id": "65dc478b5f834da6b9d9028f20ef0f19",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0.0, 0.0], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_t…"
+       "Map(center=[20, 0], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_text…"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m = Map()\n",
+    "m = geopydata.Map()\n",
     "\n",
     "m"
    ]
