--- a/docs/examples/ipyleaflet.ipynb
+++ b/docs/examples/ipyleaflet.ipynb
@@ -13,20 +13,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from geopydata.geopydata import Map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65dc478b5f834da6b9d9028f20ef0f19",
+       "model_id": "1e5a7040ddac435798b0810af133c895",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,15 +33,17 @@
    "source": [
     "m = geopydata.Map()\n",
     "\n",
-    "m"
+    "# url = 'https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer/tile/{z}/{y}/{x}'\n",
+    "# m.add_layer_tile(url=url,name='USGS',attribution='U.S.Geological Survey')\n",
+    "m.add_basemap(\"Esri.NatGeoWorldMap\")\n",
+    "m.add_basemap('OpenTopoMap')\n",
+    "m.add_basemap('NASAGIBS.ViirsEarthAtNight2012')\n",
+    "m.add_layer_control()\n",
+    "m\n",
+    "\n",
+    "# m.add_basemap(\"OpenTopoMap\")\n",
+    "# m"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
